[gd_scene load_steps=20 format=3 uid="uid://c01jn38ldum2i"]

[ext_resource type="Script" path="res://script/orm.gd" id="1_v5t7j"]
[ext_resource type="Texture2D" uid="uid://4bclfh62gtcj" path="res://assets/characters/new_orm.png" id="2_r4lp6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gvofa"]
radius = 4.0
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_r3p0u"]
atlas = ExtResource("2_r4lp6")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urr47"]
atlas = ExtResource("2_r4lp6")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cicp"]
atlas = ExtResource("2_r4lp6")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opv3n"]
atlas = ExtResource("2_r4lp6")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfxj3"]
atlas = ExtResource("2_r4lp6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dth5"]
atlas = ExtResource("2_r4lp6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3rjb"]
atlas = ExtResource("2_r4lp6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu67b"]
atlas = ExtResource("2_r4lp6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_atip2"]
atlas = ExtResource("2_r4lp6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6ccq"]
atlas = ExtResource("2_r4lp6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulnpk"]
atlas = ExtResource("2_r4lp6")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x15ly"]
atlas = ExtResource("2_r4lp6")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rf17g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3p0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urr47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cicp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opv3n")
}],
"loop": false,
"name": &"attack",
"speed": 9.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfxj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dth5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3rjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu67b")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_atip2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6ccq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulnpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x15ly")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hy88r"]
radius = 68.0
height = 136.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6xg7q"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tlb1c"]
radius = 8.0
height = 16.0

[node name="orm" type="CharacterBody2D" groups=["enemy_group"]]
z_index = 1
rotation = -1.5708
collision_layer = 8
collision_mask = 0
script = ExtResource("1_v5t7j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gvofa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rf17g")
animation = &"idle"
frame_progress = 0.0901195

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
modulate = Color(1, 1, 1, 0.337255)
shape = SubResource("CapsuleShape2D_hy88r")

[node name="AttackCheckArea" type="Area2D" parent="."]
position = Vector2(-5, 0)
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackCheckArea"]
modulate = Color(1, 1, 1, 0.419608)
position = Vector2(12, 0)
rotation = 1.5708
shape = SubResource("CircleShape2D_6xg7q")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(11, 0)
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tlb1c")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
